@@ -14,6 +14,7 @@
 - Using -f/--full does not impact -c/--cpu anymore, most systems ship with 2 or more CPUs
 - Added counter 'parent' when printing CSV subtitles of list-counters (Michael Boutillier)
 - Print decimal values as decimals where possible (so 0 instead of 0.0)
+- Added external dstat_ddwrt_* plugins using DD-WRT counters using SNMP infrastructure
 
 * 0.7.2 - Real soon now - release 15/06/2010
 - Added external dstat_disk_tps plugin to show transactions per second
